--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Run PyInstaller
       run: |
-        pyinstaller --onefile --windowed --name="EmailGenerator" --collect-all="PySide6" --hidden-import="PySide6.QtGui" --hidden-import="PySide6.QtWidgets" --hidden-import="PySide6.QtCore" --hidden-import="PySide6.QtNetwork"
+        pyinstaller --onefile --windowed --name="EmailGenerator" --collect-all="PySide6" --hidden-import="PySide6.QtGui" --hidden-import="PySide6.QtWidgets" --hidden-import="PySide6.QtCore" --hidden-import="PySide6.QtNetwork" emailgenerator.py
 
     - name: Upload the EXE
       uses: actions/upload-artifact@v4
