--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,25 +18,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt  # This installs PySide6, PyInstaller, etc.
     
-    - name: Get PySide6 path
-      id: pyside6_path
-      shell: pwsh
-      run: |
-        $pyside_loc = (pip show PySide6).Location
-        echo "pyside_path=$pyside_loc" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+    # This single step replaces all the complex path-finding logic.
+    - name: Install PyInstaller Hooks 
+      run: pip install pyinstaller-hooks-contrib
 
+    # The PyInstaller command is now very simple.
     - name: Run PyInstaller
-      shell: pwsh
-      run: |
-        pyinstaller --onefile --windowed --name="EmailGenerator" `
-        --add-binary="${{ steps.pyside6_path.outputs.pyside_path }}/PySide6/plugins/styles;PySide6/plugins/styles" `
-        --add-binary="${{ steps.pyside6_path.outputs.pyside_path }}/PySide6/plugins/platforms;PySide6/plugins/platforms" `
-        --hidden-import="PySide6.QtGui" `
-        --hidden-import="PySide6.QtWidgets" `
-        --hidden-import="PySide6.QtCore" `
-        emailgenerator.py
+      run: pyinstaller --onefile --windowed --name="EmailGenerator" emailgenerator.py
 
     - name: Upload the EXE
       uses: actions/upload-artifact@v4
